--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@ align-items: center;
 min-height: 100vh;
 }
 .container{
-    height: 500px;
-    width: 300px;
+    /* height: 500px; */
+    width: 375px;
     text-align: center;
     /* margin: 0 auto; */
     background-color: hsl(0, 0%, 12%);
